# aletaindex-fin-narratives

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  nginx-mcp.conf  smithery.yaml
.github/workflows/: deploy.yml
docs/: api-reference.md  data-model.md  dev-plan.md  direct-api-guide.md
examples/: strategy-prompts.md
mcp/: Dockerfile  README.md  pyproject.toml  server-card.json  server.py
mcp/tests/: test_server.py
