[project]
name = "narrative-intelligence-mcp"
version = "0.1.0"
description = "MCP server for Narrative Intelligence — financial narrative tracking for AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
narrative-intelligence-mcp = "narrative_intelligence_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
