[project]
name = "narrative-intelligence-mcp"
version = "0.1.0"
description = "MCP server for AletaIndex — financial narrative intelligence for AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
narrative-intelligence-mcp = "server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
