[project]
name = "narrative-intelligence-mcp"
version = "0.1.1"
description = "MCP server for AletaIndex — financial narrative intelligence for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AletaIndex", email = "info@aletaindex-narrative.com" }]
keywords = ["mcp", "finance", "narratives", "sentiment", "stocks", "AI", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://aletaindex-narrative.com"
Documentation = "https://github.com/AletaIndex/aletaindex-fin-narratives"
Repository = "https://github.com/AletaIndex/aletaindex-fin-narratives"

[project.scripts]
narrative-intelligence-mcp = "server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
